<resources>
    <string name="app_name">Kwizz</string>

    <!--Main Menu-->
    <string name="goGo">Start new quiz</string>
    <string name="goHome">Home page</string>
    <string name="goEmail">Send result on email</string>
    <string name="goScores">History</string>
    <string name="goLogout">Log Out</string>

    <!--First Page-->
    <string name="tbEmail">Enter your email</string>
    <string name="btGo">Start new quiz</string>
    <string name="btScores">History</string>
    <string name="btLogin">Log In</string>
    <string name="btResume">Resume quiz</string>

    <!--Quiz Activity-->
    <string name="btBack">Previous</string>
    <string name="btForward">Next</string>
    <string name="btConfirm">Confirm</string>
    <string name="btReset">Reset current quiz</string>
    <string name="btNewQuiz">New quiz</string>
    <string name="btEmail">Send results on my email</string>
    <string name="btOpenResult">Open result details</string>

</resources>
