<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:visibility="gone"
         />
    <EditText
        android:id="@+id/tbEmail"
        android:layout_height="wrap_content"
        android:hint="@string/tbEmail"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent">
    </EditText>
    <Button
        android:id="@+id/btLogin"
        android:layout_height="wrap_content"
        android:text="@string/btLogin"
        android:onClick="login"
        android:layout_width="fill_parent">
    </Button>
    <Button
        android:id="@+id/btGo"
        android:layout_height="wrap_content"
        android:text="@string/btGo"
        android:onClick="openQuiz"
        android:layout_width="fill_parent"
        android:visibility="gone">

    </Button>

    <Button
        android:id="@+id/btScores"
        android:layout_height="wrap_content"
        android:text="@string/btScores"
        android:onClick="showScores"
        android:layout_width="fill_parent"
        android:visibility="gone">
    </Button>
    <!--<Button-->
        <!--android:id="@+id/bt"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/bt"-->
        <!--android:onClick="sendMail"-->
        <!--android:layout_width="fill_parent">-->
    <!--</Button>-->
</LinearLayout>