<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:orientation="vertical"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Question 1 of 10!"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ANSWERS"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btBack"
            android:layout_height="wrap_content"
            android:text="@string/btBack"
            android:onClick="goBack"
            android:layout_width="wrap_content">
        </Button>
        <Button
            android:id="@+id/btConfirm"
            android:layout_height="wrap_content"
            android:text="@string/btConfirm"
            android:onClick="confirm"
            android:layout_width="wrap_content">
        </Button>
        <Button
            android:id="@+id/btForward"
            android:layout_height="wrap_content"
            android:text="@string/btForward"
            android:onClick="goForward"
            android:layout_width="wrap_content">
        </Button>

    </LinearLayout>
    <Button
        android:id="@+id/btEmail"
        android:layout_height="wrap_content"
        android:text="@string/btEmail"
        android:onClick="sendEmail"
        android:layout_width="fill_parent">
    </Button>
</LinearLayout>